// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend.asginstance;

import "google/protobuf/timestamp.proto";
import "protos/shared/backend/asginstance/instance_status.proto";
import "protos/shared/backend/asginstance/instance_termination_reason.proto";

option java_outer_classname = "AsgInstanceProto";
option java_package = "com.google.aggregate.protos.shared.backend.asginstance";

// Autoscaling group instance information.
message AsgInstance {
  // The compute instance name.
  string instance_name = 1;

  // The instance termination status.
  google.aggregate.protos.shared.backend.asginstance.InstanceStatus status = 2;

  // The instance termination request time.
  google.protobuf.Timestamp request_time = 3;

  // The instance termination time.
  google.protobuf.Timestamp termination_time = 4;

  // The ttl of the instance record.
  int64 ttl = 5;

  // The last lifecycle action heartbeat time.
  google.protobuf.Timestamp last_heartbeat_time = 6;

  // The instance termination reason.
  optional google.aggregate.protos.shared.backend.asginstance.InstanceTerminationReason termination_reason = 7;
}
